# junia-automatic-deployment-dockerisation

./: README.md  docker-best-practices.md  docker-compose.dev.yaml  docker.md
.github/workflows/: docker-ci.yaml
junia-automatic-deployment-backend/: Dockerfile.advanced  Dockerfile.advancedv2  Dockerfile.basic  Dockerfile.standard  main.py  makefile  pyproject.toml
junia-automatic-deployment-backend/config/: schemas.py
junia-automatic-deployment-backend/routes/: juniagpt.py
junia-automatic-deployment-backend/tests/: cst-advanced.yaml  cst-advancedv2.yaml  cst-basic.yaml  cst-standard.yaml  cst-standardv2.yaml
junia-automatic-deployment-frontend/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile.advanced  Dockerfile.advancedv2  Dockerfile.basic  Dockerfile.standard  Dockerfile.standardv2  main.py  makefile  pyproject.toml  tp03.md
junia-automatic-deployment-frontend/rest/: service.py
junia-automatic-deployment-frontend/tests/: cst-advanced.yaml  cst-basic.yaml  cst-standard.yaml  test_app.py
ollama/: entrypoint.sh
