[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.6",
  "httpx>=0.28.1",
  "pydantic-settings>=2.7.1",
  "pydantic>=2.10.5",
  "uvicorn>=0.34.0",
]

[dependency-groups]
dev = ["isort>=5.13.2", "ruff>=0.9.2"]
