[project]
name = "frontend-juniagpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic-settings>=2.7.1",
    "pydantic>=2.10.5",
    "streamlit>=1.41.1",
]

[project.optional-dependencies]
tests = [
    "pytest>=8.3.4",
    "pytest-playwright>=0.7.0",
]

[dependency-groups]
dev = ["isort>=5.13.2", "pre-commit>=4.0.1", "ruff>=0.9.2"]
